--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ p{
 }
 .orange-button{
     padding: 10px;
-    margin: 0px; 10px;
+    margin: 0px  10px;
     color: white;
     font-size: 25px;
     border: 0px;
